update after cvpr25

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <td width="100%" valign="middle">
               <heading id="about">About me</heading>
                 <div class="text" align="justify">
-                  <p class="light">Hi! My name is Yue Yang (杨樾). I am a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania, and an incoming research scientist at <a href="https://allenai.org/">Ai2</a>. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a> and <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
+                  <p class="light">Hi! My name is Yue Yang (杨樾). I am a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a> and <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
                   </p>
                 </div>
                 <div class="text" align="justify">
@@ -200,6 +200,9 @@
                 </div>
                 <div class="authors">
                   Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
+                </div>
+                <div class="venue">
+                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025
                 </div>
                 <div class="tags">
                   <a href="https://molmo.allenai.org/blog">blog</a> /
@@ -307,8 +310,31 @@
                 </div>
               </td>
             </tr>
-            
-            
+
+            <tr>
+              <td width="30%">
+                <img src="images/molmo.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="https://molmo.allenai.org/blog"><b>Open Weights and Open Data for State-of-the-Art Multimodal Models</b></a>
+                </div>
+                <div class="authors">
+                  Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
+                </div>
+                <div class="venue">
+                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025
+                </div>
+                <div class="tags">
+                  <a href="https://molmo.allenai.org/blog">blog</a> /
+                  <a href="https://molmo.allenai.org">demo</a> /
+                  <a href="https://molmo.allenai.org/paper.pdf">report</a> /
+                  <a href="https://huggingface.co/collections/allenai/molmo-66f379e6fe3b8ef090a8ca19">models</a> /
+                  <a href="https://huggingface.co/collections/allenai/pixmo-674746ea613028006285687b">data</a> /
+                  <a href="https://github.com/allenai/molmo">code</a>
+                </div>
+              </td>
+            </tr>
 
             <tr>
               <td width="30%">
