--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <td width="70%" valign="middle">
               <name>Yue Yang</name><br>
               pronounced as <i>yoo-eh</i><br><br>
-              220 South 33rd Street, Towne 299<br>Philadelphia, PA 19104, USA<br>
+              3317 Chestnut St, Amy Gutmann Hall<br>Philadelphia, PA 19104, USA<br>
               Email: yueyang1 [at] seas.upenn.edu<br><br>
               <a href="https://scholar.google.com/citations?user=uvyYzagAAAAJ&hl=en&authuser=1">
                 <img src="images/icons/google-scholar.svg" alt="Google Scholar Icon">
@@ -121,7 +121,7 @@
             <td width="100%" valign="middle">
               <heading id="about">About me</heading>
                 <div class="text" align="justify">
-                  <p class="light">Hi! My name is Yue Yang (杨樾). I am a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a> and <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
+                  <p class="light">Hi! My name is Yue Yang (杨樾). I am an incoming research scientist at <a href="https://allenai.org/">Ai2</a> and a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a> and <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
                   </p>
                 </div>
                 <div class="text" align="justify">
@@ -183,6 +183,7 @@
                   <i>In submission</i>, 2025
                 </div>
                 <div class="tags">
+                  <a href="https://arxiv.org/abs/2502.14846">arxiv</a> /
                   <a href="https://yueyang1996.github.io/cosyn/">website</a> /
                   <a href="https://huggingface.co/datasets/allenai/CoSyn-400K">data</a> /
                   <a href="https://github.com/allenai/pixmo-docs">code</a>
@@ -202,12 +203,12 @@
                   Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
                 </div>
                 <div class="venue">
-                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025
+                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025 <b style="color: #ac530f">(Oral)</b>
                 </div>
                 <div class="tags">
                   <a href="https://molmo.allenai.org/blog">blog</a> /
                   <a href="https://molmo.allenai.org">demo</a> /
-                  <a href="https://molmo.allenai.org/paper.pdf">report</a> /
+                  <a href="https://arxiv.org/abs/2409.17146">report</a> /
                   <a href="https://huggingface.co/collections/allenai/molmo-66f379e6fe3b8ef090a8ca19">models</a> /
                   <a href="https://huggingface.co/collections/allenai/pixmo-674746ea613028006285687b">data</a> /
                   <a href="https://github.com/allenai/molmo">code</a>
@@ -323,15 +324,38 @@
                   Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
                 </div>
                 <div class="venue">
-                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025
+                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025 <b style="color: #ac530f">(Oral)</b>
                 </div>
                 <div class="tags">
                   <a href="https://molmo.allenai.org/blog">blog</a> /
                   <a href="https://molmo.allenai.org">demo</a> /
-                  <a href="https://molmo.allenai.org/paper.pdf">report</a> /
+                  <a href="https://arxiv.org/abs/2409.17146">report</a> /
                   <a href="https://huggingface.co/collections/allenai/molmo-66f379e6fe3b8ef090a8ca19">models</a> /
                   <a href="https://huggingface.co/collections/allenai/pixmo-674746ea613028006285687b">data</a> /
                   <a href="https://github.com/allenai/molmo">code</a>
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
+                <img src="images/bacon.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="https://arxiv.org/pdf/2407.03314"><b>BACON: Improving Clarity of Image Captions via Bag-of-Concept Graphs</b></a>
+                </div>
+                <div class="authors">
+                  Zhantao Yang, Ruili Feng, Keyu Yan, Huangji Wang, Zhicai Wang, Shangwen Zhu, Han Zhang, Jie Xiao, Pingyu Wu, ..., <b>Yue Yang</b>, Hongyang Zhang, Yu Liu, Fan Cheng
+                </div>
+                <div class="venue">
+                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/pdf/2410.13882">arxiv</a> /
+                  <a href="https://ztyang23.github.io/bacon-page/">website</a> /
+                  <a href="https://github.com/ztyang23/BACON">code</a>
+                  <a href="https://huggingface.co/ztyang196/bacon-captioner">model</a>
                 </div>
               </td>
             </tr>
@@ -350,7 +374,7 @@
                   Long Le, Jason Xie, William Liang, Hung-Ju Wang, <b>Yue Yang</b>, Yecheng Jason Ma, Kyle Vedder, Arjun Krishna, Dinesh Jayaraman, Eric Eaton
                 </div>
                 <div class="venue">
-                  <i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2025 <b style="color: #ac530f"></b>
+                  <i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2025
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/pdf/2410.13882">arxiv</a> /
@@ -732,6 +756,7 @@
                   </td>
                   <td width="75%">
                     <a href="https://prior.allenai.org"><b>Allen Institute for AI</b></a>, Seattle, WA, USA<br>
+                    <i>Research Scientist</i> (Aug. 2025 to Present)<br>
                     <i>Research Intern</i> (May. 2023 to Sept. 2023, May. 2024 to Sept. 2024)<br>
                     <b style="color: #ac530f">Outstanding Intern of the Year Award (2023)</b> <br>
                   </td>  
