--- a/holodeck/index.html
+++ b/holodeck/index.html
@@ -553,12 +553,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3">BibTeX</h2>
-    <pre style="font-size: 16px;"><code>@article{yang2023holodeck,
-      title={Holodeck: Language Guided Generation of 3D Embodied AI Environments}, 
-      author={Yue Yang and Fan-Yun Sun and Luca Weihs and Eli VanderBilt and Alvaro Herrasti and Winson Han and Jiajun Wu and Nick Haber and Ranjay Krishna and Lingjie Liu and Chris Callison-Burch and Mark Yatskar and Aniruddha Kembhavi and Christopher Clark},
-      journal={arXiv preprint arXiv:2312.09067},
-      year={2023}
-}</code></pre>
+    <pre style="font-size: 16px;"><code>@inproceedings{yang2024holodeck,
+  title={Holodeck: Language guided generation of 3d embodied ai environments},
+  author={Yang, Yue and Sun, Fan-Yun and Weihs, Luca and VanderBilt, Eli and Herrasti, Alvaro and Han, Winson and Wu, Jiajun and Haber, Nick and Krishna, Ranjay and Liu, Lingjie and others},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={16227--16237},
+  year={2024}
+}
+</code></pre>
   </div>
 </section>
 
