update after phd defense

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <td width="100%" valign="middle">
               <heading id="about">About me</heading>
                 <div class="text" align="justify">
-                  <p class="light">Hi! My name is Yue Yang (杨樾). I am an incoming research scientist at <a href="https://allenai.org/">Ai2</a> and a final-year Ph.D. candidate in Computer and Information Science at the University of Pennsylvania. I am grateful to be advised by <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a> and <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
+                  <p class="light">Hi! My name is Yue Yang (杨樾). I am an incoming research scientist at <a href="https://prior.allenai.org/">PRIOR</a> of <a href="https://allenai.org/">Ai2</a>. I obtained my Ph.D. in Computer and Information Science at the University of Pennsylvania, advised by <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a> and <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
                   </p>
                 </div>
                 <div class="text" align="justify">
@@ -180,7 +180,7 @@
                   <strong>Yue Yang</strong>*, Ajay Patel*, Matt Deitke, Tanmay Gupta, Luca Weihs, Andrew Head, Mark Yatskar, Chris Callison-Burch, Ranjay Krishna, Aniruddha Kembhavi, Christopher Clark
                 </div>
                 <div class="venue">
-                  <i>In submission</i>, 2025
+                  <b>ACL</b> 2025
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2502.14846">arxiv</a> /
@@ -203,7 +203,7 @@
                   Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
                 </div>
                 <div class="venue">
-                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025 <b style="color: #ac530f">(Oral)</b>
+                  <b>CVPR</b> 2025 <b style="color: #ac530f">(Oral)</b>
                 </div>
                 <div class="tags">
                   <a href="https://molmo.allenai.org/blog">blog</a> /
@@ -228,7 +228,7 @@
                   <strong>Yue Yang</strong>, Mona Gandhi, Yufei Wang, Yifan Wu, Michael S. Yao, Chris Callison-Burch, James C. Gee, Mark Yatskar
                 </div>
                 <div class="venue">
-                  <i>Conference on Neural Information Processing Systems (<b>NeurIPS</b>)</i>, 2024 <b style="color: #ac530f">(Spotlight)</b>
+                  <b>NeurIPS</b> 2024 <b style="color: #ac530f">(Spotlight)</b>
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2405.14839">arxiv</a> /
@@ -261,7 +261,7 @@
                     <strong>Yue Yang</strong>*, Fan-Yun Sun*, Luca Weihs*, Eli VanderBilt, Alvaro Herrasti, Winson Han, Jiajun Wu, Nick Haber, Ranjay Krishna, Lingjie Liu, Chris Callison-Burch, Mark Yatskar, Aniruddha Kembhavi, Christopher Clark
                 </div>
                 <div class="venue">
-                    <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2024
+                    <b>CVPR</b> 2024
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2312.09067">arxiv</a> / <a href="https://yueyang1996.github.io/holodeck/">website</a> / <a href="https://github.com/allenai/Holodeck">code</a> / <a href="https://ai.seas.upenn.edu/news/penn-engineers-recreate-star-treks-holodeck-using-chatgpt-and-video-game-assets/">press</a>
@@ -284,7 +284,7 @@
                     <strong>Yue Yang</strong>, Artemis Panagopoulou, Shenghao Zhou, Daniel Jin, Chris Callison-Burch, Mark Yatskar
                 </div>
                 <div class="venue">
-                   <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2023
+                   <b>CVPR</b> 2023
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2211.11158">arxiv</a> /
@@ -314,6 +314,29 @@
 
             <tr>
               <td width="30%">
+                <img src="images/cosyn.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/cosyn.pdf"><b>CoSyn: Scaling Text-Rich Image Understanding via Code-Guided Synthetic Multimodal Data Generation</b></a>
+                </div>
+                <div class="authors">
+                  <strong>Yue Yang</strong>*, Ajay Patel*, Matt Deitke, Tanmay Gupta, Luca Weihs, Andrew Head, Mark Yatskar, Chris Callison-Burch, Ranjay Krishna, Aniruddha Kembhavi, Christopher Clark
+                </div>
+                <div class="venue">
+                  <b>ACL</b> 2025
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2502.14846">arxiv</a> /
+                  <a href="https://yueyang1996.github.io/cosyn/">website</a> /
+                  <a href="https://huggingface.co/datasets/allenai/CoSyn-400K">data</a> /
+                  <a href="https://github.com/allenai/pixmo-docs">code</a>
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="30%">
                 <img src="images/molmo.png" width="100%">
               </td>
               <td width="70%" valign="middle">
@@ -324,7 +347,7 @@
                   Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
                 </div>
                 <div class="venue">
-                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025 <b style="color: #ac530f">(Oral)</b>
+                  <b>CVPR</b> 2025 <b style="color: #ac530f">(Oral)</b>
                 </div>
                 <div class="tags">
                   <a href="https://molmo.allenai.org/blog">blog</a> /
@@ -349,7 +372,7 @@
                   Zhantao Yang, Ruili Feng, Keyu Yan, Huangji Wang, Zhicai Wang, Shangwen Zhu, Han Zhang, Jie Xiao, Pingyu Wu, ..., <b>Yue Yang</b>, Hongyang Zhang, Yu Liu, Fan Cheng
                 </div>
                 <div class="venue">
-                  <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2025
+                  <b>CVPR</b> 2025
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/pdf/2410.13882">arxiv</a> /
@@ -374,7 +397,7 @@
                   Long Le, Jason Xie, William Liang, Hung-Ju Wang, <b>Yue Yang</b>, Yecheng Jason Ma, Kyle Vedder, Arjun Krishna, Dinesh Jayaraman, Eric Eaton
                 </div>
                 <div class="venue">
-                  <i>International Conference on Learning Representations (<b>ICLR</b>)</i>, 2025
+                  <b>ICLR</b> 2025
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/pdf/2410.13882">arxiv</a> /
@@ -397,11 +420,11 @@
                   Yifan Wu, Yang Liu, <strong>Yue Yang</strong>, Michael S. Yao, Wenli Yang, Xuehui Shi, Lihong Yang, Dongjun Li, Yueming Liu, James C. Gee, Xuan Yang, Wen-bin Wei, Shi Gu
                 </div>
                 <div class="venue">
-                  <b>Nature Communications</b>, 2025
+                  <b>Nature Communications</b> 2025
                 </div>
                 <div class="tags">
-                  <a href="https://arxiv.org/abs/2403.05606">arxiv</a> /
-                  <a href="https://mmcbm.liuy.site/">demo</a>
+                  <a href="https://www.nature.com/articles/s41467-025-58801-7">paper</a> /
+                  <a href="https://github.com/brain-intelligence-lab/MMCBM">code</a>
                 </div>
               </td>
             </tr>
@@ -419,7 +442,7 @@
                   <strong>Yue Yang</strong>, Mona Gandhi, Yufei Wang, Yifan Wu, Michael S. Yao, Chris Callison-Burch, James C. Gee, Mark Yatskar
                 </div>
                 <div class="venue">
-                  <i>Conference on Neural Information Processing Systems (<b>NeurIPS</b>)</i>, 2024 <b style="color: #ac530f">(Spotlight)</b>
+                  <b>NeurIPS</b> 2024 <b style="color: #ac530f">(Spotlight)</b>
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2405.14839">arxiv</a> /
@@ -444,7 +467,7 @@
                   Runsheng Huang, Liam Dugan, <strong>Yue Yang</strong>, Chris Callison-Burch.
                 </div>
                 <div class="venue">
-                  <i>Findings of the Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2024
+                  <b>EMNLP</b> (Findings) 2024
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2410.09045">arxiv</a> /
@@ -470,7 +493,7 @@
                   Yiming Huang, Weilin Wan, <strong>Yue Yang</strong>, Chris Callison-Burch, Mark Yatskar, Lingjie Liu
                 </div>
                 <div class="venue">
-                  <i>European Conference on Computer Vision (<b>ECCV</b>)</i>, 2024
+                  <b>ECCV</b> 2024
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2403.13900">arxiv</a> /
@@ -501,7 +524,7 @@
                     <strong>Yue Yang</strong>*, Fan-Yun Sun*, Luca Weihs*, Eli VanderBilt, Alvaro Herrasti, Winson Han, Jiajun Wu, Nick Haber, Ranjay Krishna, Lingjie Liu, Chris Callison-Burch, Mark Yatskar, Aniruddha Kembhavi, Christopher Clark
                 </div>
                 <div class="venue">
-                    <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2024
+                    <b>CVPR</b> 2024
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2312.09067">arxiv</a> / <a href="https://yueyang1996.github.io/holodeck/">website</a> / <a href="https://github.com/allenai/Holodeck">code</a>
@@ -524,7 +547,7 @@
                     Tuhin Chakrabarty, Arkady Saakyan, Olivia Winn, Artemis Panagopoulou, <strong>Yue Yang</strong>, Marianna Apidianaki, Smaranda Muresan
                 </div>
                 <div class="venue">
-                   <i>Findings of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2023
+                   <b>ACL</b> (Findings) 2023
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/pdf/2305.14724">arxiv</a> /
@@ -548,7 +571,7 @@
                     <strong>Yue Yang</strong>, Artemis Panagopoulou, Shenghao Zhou, Daniel Jin, Chris Callison-Burch, Mark Yatskar
                 </div>
                 <div class="venue">
-                   <i>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>)</i>, 2023
+                   <b>CVPR</b> 2023
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2211.11158">arxiv</a> /
@@ -572,7 +595,7 @@
                     Li Zhang, Hainiu Xu, <strong>Yue Yang</strong>, Shuyan Zhou, Weiqiu You, Manni Arora, Chris Callison-Burch
                 </div>
                 <div class="venue">
-                   <i>Findings of the European Chapter of the ACL (<b>EACL</b>)</i>, 2023
+                   <b>EACL</b> (Findings) 2023
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2301.10896">arxiv</a> /
@@ -596,7 +619,7 @@
                     <strong>Yue Yang</strong>, Wenlin Yao, Hongming Zhang, Xiaoyang Wang, Dong Yu, Jianshu Chen
                 </div>
                 <div class="venue">
-                   <i>Conference on Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2022
+                  <b>EMNLP</b> 2022
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2210.12261">arxiv</a> /
@@ -620,7 +643,7 @@
                     <strong>Yue Yang</strong>*, Artemis Panagopoulou*, Marianna Apidianaki, Mark Yatskar, Chris Callison-Burch (*equal contribution)
                 </div>
                 <div class="venue">
-                   <i>Findings of the Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2022
+                   <b>EMNLP</b> 2022
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2210.12905">arxiv</a> /
@@ -644,7 +667,7 @@
                     Shuyan Zhou, Harry Li Zhang, <strong>Yue Yang</strong>, Veronica Qing Lyu, Pengcheng Yin, Chris Callison-Burch, Graham Neubig
                 </div>
                 <div class="venue">
-                   <i>Annual Meeting of the Association for Computational Linguistics (<b>ACL</b>)</i>, 2022
+                   <b>ACL</b> 2022
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2203.07264">arxiv</a> /
@@ -670,7 +693,7 @@
                     <strong>Yue Yang</strong>, Joongwon Kim, Artemis Panagopoulou, Mark Yatskar and Chris Callison-Burch
                 </div>
                 <div class="venue">
-                  <i>CVPR 2022 @ ODRUM</i>, 2022, spotlight talk
+                  ODRUM @ CVPR 2022 (spotlight talk)
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2111.09276">arxiv</a> /
@@ -694,7 +717,7 @@
                     <strong>Yue Yang</strong>, Artemis Panagopoulou, Qing Lyu, Li Zhang, Mark Yatskar and Chris Callison-Burch
                 </div>
                 <div class="venue">
-                  <i>Conference on Empirical Methods in Natural Language Processing (<b>EMNLP</b>)</i>, 2021
+                  <b>EMNLP</b> 2021
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2104.05845">arxiv</a> / 
@@ -722,7 +745,7 @@
                   </td>
                   <td width="75%">
                     <b>University of Pennsylvania</b>, Philadelphia, PA, USA<br>
-                    <li> Ph.D. in Computer and Information Science (2020 - present)</li>
+                    <li> Ph.D. in Computer and Information Science (2020 - 2025)</li>
                     <li> M.S. in Robotics (2018 - 2020)</li>
                   </td>
                   
