--- a/cosyn/index.html
+++ b/cosyn/index.html
@@ -664,7 +664,7 @@
         <h2 class="title is-3">CoSyn can Generate Targeted Data for Domain Generalization</h2>
         <div class="content has-text-justified">
           <p>
-            We identify a key limitation of open-source VLMs that they struggle to generalize to out-of-domain tasks they were not trained on. However, CoSyn enables controllable data generation, allowing task-specific fine-tuning to achieve strong generalization performance with significantly less data. Download <a href="https://huggingface.co/yyupenn/NutritionQA">NutritionQA</a>.
+            We identify a key limitation of open-source VLMs that they struggle to generalize to out-of-domain tasks they were not trained on. However, CoSyn enables controllable data generation, allowing task-specific fine-tuning to achieve strong generalization performance with significantly less data. Download <a href="https://huggingface.co/datasets/yyupenn/NutritionQA">NutritionQA</a>.
           </p>
         </div>
 
