update before work

--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
             <td width="100%" valign="middle">
               <heading id="about">About me</heading>
                 <div class="text" align="justify">
-                  <p class="light">Hi! My name is Yue Yang (杨樾). I am an incoming research scientist at <a href="https://prior.allenai.org/">PRIOR</a> of <a href="https://allenai.org/">Ai2</a>. I obtained my Ph.D. in Computer and Information Science at the University of Pennsylvania, advised by <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a> and <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
+                  <p class="light">
+                    Hi! My name is Yue Yang (<span style="font-family: 'Pacifico', cursive; font-size: 1.1em;">杨樾</span>). I am an incoming research scientist at <a href="https://prior.allenai.org/">PRIOR</a> of 
+                    <span style="display: inline-flex; align-items: baseline;">
+                      <img src="images/icons/ai2-monogram.svg" alt="AI2 Logo" style="height: 0.8em; vertical-align: baseline; margin-left: 4px;">
+                      <a href="https://allenai.org/" style="display: inline; vertical-align: baseline; color: #e9428e;">Ai2</a>
+                    </span>. I obtained my Ph.D. in Computer and Information Science at the University of Pennsylvania, advised by <a href="https://www.cis.upenn.edu/~myatskar/">Prof. Mark Yatskar</a> and <a href="https://www.cis.upenn.edu/~ccb/">Prof. Chris Callison-Burch</a>. I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
                   </p>
                 </div>
                 <div class="text" align="justify">
@@ -180,7 +185,7 @@
                   <strong>Yue Yang</strong>*, Ajay Patel*, Matt Deitke, Tanmay Gupta, Luca Weihs, Andrew Head, Mark Yatskar, Chris Callison-Burch, Ranjay Krishna, Aniruddha Kembhavi, Christopher Clark
                 </div>
                 <div class="venue">
-                  <b>ACL</b> 2025
+                  <b>ACL</b> 2025 <b style="color: #ac530f">(SAC Highlights Award)</b>
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2502.14846">arxiv</a> /
@@ -203,7 +208,7 @@
                   Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
                 </div>
                 <div class="venue">
-                  <b>CVPR</b> 2025 <b style="color: #ac530f">(Oral)</b>
+                  <b>CVPR</b> 2025 <b style="color: #ac530f">(Best Paper Honorable Mention)</b>
                 </div>
                 <div class="tags">
                   <a href="https://molmo.allenai.org/blog">blog</a> /
@@ -324,7 +329,7 @@
                   <strong>Yue Yang</strong>*, Ajay Patel*, Matt Deitke, Tanmay Gupta, Luca Weihs, Andrew Head, Mark Yatskar, Chris Callison-Burch, Ranjay Krishna, Aniruddha Kembhavi, Christopher Clark
                 </div>
                 <div class="venue">
-                  <b>ACL</b> 2025
+                  <b>ACL</b> 2025 <b style="color: #ac530f">(SAC Highlights Award)</b>
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2502.14846">arxiv</a> /
@@ -347,7 +352,7 @@
                   Matt Deitke*, Christopher Clark*, Sangho Lee, Rohun Tripathi, <strong>Yue Yang</strong>, Jae Sung Park, Mohammadreza Salehi, Niklas Muennighoff, Kyle Lo, et al. (51 authors in total)
                 </div>
                 <div class="venue">
-                  <b>CVPR</b> 2025 <b style="color: #ac530f">(Oral)</b>
+                  <b>CVPR</b> 2025 <b style="color: #ac530f">(Best Paper Honorable Mention)</b>
                 </div>
                 <div class="tags">
                   <a href="https://molmo.allenai.org/blog">blog</a> /
