--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
                     <div class="contact-info">
                         <p>Research Scientist at <a href="https://prior.allenai.org/" class="highlight-link">PRIOR</a>, 
-                           <img src="images/icons/ai2-monogram.svg" alt="AI2" class="inline-logo">
-                           <a href="https://allenai.org/" class="ai2-link">Ai2</a>
+                        <a href="https://allenai.org/" class="ai2-link" style="display: inline-flex; align-items: center;">
+                            <img src="images/icons/ai2-monogram.svg" alt="AI2" class="inline-logo" style="margin-right: 2px;">
+                            Ai2
+                        </a>
                         </p>
                         <p>3800 Latona Ave NE, Suite 300<br>Seattle, WA 98105</p>
                         <p>Email: yueyang2333 [at] gmail.com</p>
@@ -88,19 +90,21 @@
         <section id="about" class="section">
             <!-- <h2 class="section-title">About Me</h2> -->
             <div class="about-content">
-                <p>
-                    Hi! My name is Yue Yang. I am a research scientist at <a href="https://prior.allenai.org/">PRIOR</a> of 
+                <p style="text-align: justify;">
+                    Hi! My name is Yue Yang. I am a research scientist at <a href="https://prior.allenai.org/" class="highlight-link">PRIOR</a> of 
                     <span class="inline-institution">
-                        <img src="images/icons/ai2-monogram.svg" alt="AI2" class="inline-logo">
-                        <a href="https://allenai.org/" class="ai2-link">Ai2</a>
+                        <a href="https://allenai.org/" class="ai2-link" style="display: inline-flex; align-items: center;">
+                            <img src="images/icons/ai2-monogram.svg" alt="AI2" class="inline-logo" style="margin-right: 2px;">
+                            Ai2
+                        </a>
                     </span>. 
                     I obtained my Ph.D. in Computer and Information Science at the University of Pennsylvania, 
-                    advised by <a href="https://www.cis.upenn.edu/~myatskar/">Mark Yatskar</a> and 
-                    <a href="https://www.cis.upenn.edu/~ccb/">Chris Callison-Burch</a>. 
+                    advised by <a href="https://www.cis.upenn.edu/~myatskar/" class="highlight-link">Mark Yatskar</a> and 
+                    <a href="https://www.cis.upenn.edu/~ccb/" class="highlight-link">Chris Callison-Burch</a>. 
                     I am interested in the intersection area of Natural Language Processing (NLP) and Computer Vision (CV).
                 </p>
                 
-                <p class="research-focus-inline">
+                <p class="research-focus-inline" style="text-align: justify;">
                 My current research focuses on applying the knowledge priors of large language models (LLMs) 
                 to various domains (images, videos, healthcare, Embodied AI, etc) to improve the 
                 <span class="research-aspect">
@@ -115,7 +119,7 @@
                     <img src="images/creativity.png" alt="Data Efficiency" class="inline-research-icon">
                     <strong>Data Efficiency</strong>
                 </span> 
-                of AI systems.
+                of AI.
             </p>
             </div>
         </section>
