--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="header-image">
-                    <img src="images/cancun.png" alt="Yue Yang">
+                    <img src="images/ai2_profile.jpeg" alt="Yue Yang">
                 </div>
             </div>
         </section>
